Correccion ej. nominas

--- a/salarioNeto/nbproject/project.properties
+++ b/salarioNeto/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/salarioNeto.jar
+dist.jar=${dist.dir}/SalarioNeto_Corregido.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/salarioNeto
+dist.jlink.output=${dist.jlink.dir}/SalarioNeto_Corregido
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=salarioNeto
-main.class=salarioneto.SalarioNeto
+jlink.launcher.name=SalarioNeto_Corregido
+main.class=salarioneto.SalarioNeto_Corregido
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
